operator/pkg/model/ingestion/testdata/gateway/tls_route_filters_by_parent_ref_port/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: platform
  namespace: gateway-ns
spec:
  gatewayClassName: ""
  listeners:
  - name: tls-443
    port: 443
    protocol: TLS
  - name: tls-8443
    port: 8443
    protocol: TLS
status: {}
