operator/pkg/model/ingestion/testdata/gateway/tls_route_filters_by_parent_ref_port/input-service.yaml
- metadata:
    creationTimestamp: null
    name: podinfo
    namespace: gateway-ns
  spec:
    ports:
    - port: 9898
  status:
    loadBalancer: {}
