operator/pkg/model/ingestion/testdata/gateway/tls_route_filters_by_parent_ref_port/input-tlsroute.yaml
- metadata:
    creationTimestamp: null
    name: tls
    namespace: gateway-ns
  spec:
    parentRefs:
    - name: platform
      port: 8443
    rules:
    - backendRefs:
      - name: podinfo
        port: 9898
  status:
    parents: null
