operator/pkg/model/ingestion/testdata/gateway/tls_route_filters_by_parent_ref_port/output-listeners.yaml
- hostname: "*"
  mode: Passthrough
  name: tls-443
  port: 443
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: gateway-ns
    version: v1
- hostname: "*"
  mode: Passthrough
  name: tls-8443
  port: 8443
  routes:
  - backends:
    - name: podinfo
      namespace: gateway-ns
      port:
        port: 9898
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: gateway-ns
    version: v1
